--- a/dart-dio/api_util.mustache
+++ b/dart-dio/api_util.mustache
@@ -4,13 +4,21 @@ import 'package:built_value/serializer.dart';
 
 /// Format the given parameter object into string.
 String parameterToString(Serializers serializers, dynamic value) {
-	if (value == null) {
-		return '';
-	} else if (value is String || value is num || value is bool) {
-		return value.toString();
-	} else if (value is DateTime) {
-    	return value.toIso8601String();
-  	} else {
-		return json.encode(serializers.serialize(value));
-	}
+  if (value == null) {
+    return '';
+  } else if (value is String || value is num || value is bool) {
+    return value.toString();
+  } else if (value is DateTime) {
+    return value.toIso8601String();
+  } else {
+    List<FullType> params = [];
+    if (value is List) {
+      params.add(FullType(typeOfElementsInList(value)));
+    } else if (value is Map) {
+      params.addAll(typeOfElementsInMap(value).map((e) => FullType(e)));
+    }
+    var serialized = serializers.serialize(value,
+        specifiedType: FullType(value.runtimeType, params));
+    return json.encode(serialized);
+  }
 }
