--- a/dart-dio/serializers.mustache
+++ b/dart-dio/serializers.mustache
@@ -22,6 +22,10 @@ Serializers serializers = (_$serializers.toBuilder()
 {{#models}}{{#model}}..addBuilderFactory(
 const FullType(BuiltList, const [const FullType({{classname}})]),
 () => new ListBuilder<{{classname}}>())
+{{/model}}
+{{#model}}..addBuilderFactory(
+const FullType(BuiltMap, const [const FullType(String),const FullType({{classname}})]),
+() => new MapBuilder<String,{{classname}}>())
 {{/model}}{{/models}}
 ..add(Iso8601DateTimeSerializer())
 ).build();
