--- a/dart-dio/api_util.mustache
+++ b/dart-dio/api_util.mustache
@@ -1,27 +1,18 @@
-import 'dart:convert';
-
 import 'package:built_value/serializer.dart';
 
-Type typeOfElementsInList<T>(List<T> list) => T;
-List<Type> typeOfElementsInMap<TK,TV>(Map<TK,TV> map) => [TK,TV];
-
 /// Format the given parameter object into string.
-String parameterToString(Serializers serializers, dynamic value) {
+String parameterToString(Serializers serializers, dynamic value,
+    {FullType type = FullType.unspecified}) {
   if (value == null) {
     return '';
-  } else if (value is String || value is num || value is bool) {
-    return value.toString();
-  } else if (value is DateTime) {
-    return value.toIso8601String();
   } else {
-    List<FullType> params = [];
-    if (value is List) {
-      params.add(FullType(typeOfElementsInList(value)));
-    } else if (value is Map) {
-      params.addAll(typeOfElementsInMap(value).map((e) => FullType(e)));
+    var serialized = serializers.serialize(value, specifiedType: type);
+    if (serialized is String) {
+      return serialized;
+    } else if (serialized is List) {
+      return serialized.join(",");
+    } else {
+      return serialized.toString();
     }
-    var serialized = serializers.serialize(value,
-        specifiedType: FullType(value.runtimeType, params));
-    return serialized;
   }
 }
