--- a/dart-dio/api.mustache
+++ b/dart-dio/api.mustache
@@ -14,7 +14,7 @@ class {{classname}} {
     final Dio _dio;
     Serializers _serializers;
     bool _fileNamesHaveBrackets;
-
+    String get _appended => _fileNamesHaveBrackets ? '[]': '';
     {{classname}}(this._dio, this._serializers,this._fileNamesHaveBrackets);
 
     {{#operation}}
@@ -54,8 +54,7 @@ class {{classname}} {
         {{#hasFormParams}}
 
         final Map<String, dynamic> formData = {};
-        final _formFiles = <MapEntry<String,MultipartFile>>[];
-        final _appended = _fileNamesHaveBrackets ? '[]': '';
+        final _formFiles = <MapEntry<String,MultipartFile>>[];        
 
         {{#isMultipart}}
         {{#formParams}}
