--- a/dart-dio/api.mustache
+++ b/dart-dio/api.mustache
@@ -2,7 +2,7 @@ import 'dart:async';
 import 'dart:convert';
 import 'package:dio/dio.dart';
 import 'package:built_value/serializer.dart';
-import 'package:built_collection/built_collection.dart'
+import 'package:built_collection/built_collection.dart';
 {{#operations}}
 {{#modelImports}}import 'package:{{pubName}}/model/{{.}}.dart';
 {{/modelImports}}
