--- a/dart-dio/pubspec.mustache
+++ b/dart-dio/pubspec.mustache
@@ -4,7 +4,7 @@ description: {{pubDescription}}
 environment:
     sdk: ">=2.11.0 <3.0.0"
 dependencies:
-    dio: ^4.0.0-beta4
+    dio: ^4.0.0-prev3
     built_value: ^8.0.0
     built_collection: ^5.0.0
 {{#timeMachine}}
