--- a/dart-dio/auth/oauth.mustache
+++ b/dart-dio/auth/oauth.mustache
@@ -16,6 +16,6 @@ class OAuthInterceptor extends AuthInterceptor {
                 break;
             }
         }
-        super.onRequest(options);
+        super.onRequest(options,handler);
     }
 }
