--- a/dart-dio/pubspec.mustache
+++ b/dart-dio/pubspec.mustache
@@ -4,14 +4,14 @@ description: {{pubDescription}}
 environment:
     sdk: ">=2.11.0 <3.0.0"
 dependencies:
-    dio: ^4.0.0-prev3
-    built_value: ^8.0.0
+    dio: ^4.0.0
+    built_value: ^8.0.6
     built_collection: ^5.0.0
 {{#timeMachine}}
     time_machine: ^0.9.12
 {{/timeMachine}}
 dev_dependencies:
-    built_value_generator: ^8.0.0
-    build_runner: ^1.7.1
-    test: ^1.16.5
+    built_value_generator: ^8.0.6
+    build_runner: ^2.0.4
+    test: ^1.17.6
 
