--- a/dart-dio/apilib.mustache
+++ b/dart-dio/apilib.mustache
@@ -13,42 +13,57 @@ final _defaultInterceptors = [OAuthInterceptor(), BasicAuthInterceptor(), ApiKey
 
 class {{clientName}} {
 
-    Dio dio;
-    Serializers serializers;
-    String basePath = '{{{basePath}}}';
-    bool fileNamesHaveBrackets;
+    late Dio dio;
+    late Serializers serializers;
+    final defaultBasePath = '{{{basePath}}}';
+    final bool fileNamesHaveBrackets;
 
-    {{clientName}}({this.dio, Serializers serializers, String basePathOverride, int connectTimeoutOverride, int receiveTimeoutOverride, List<Interceptor> interceptors, bool fileNamesHaveBrackets=true}) {
-        if (dio == null) {
-            BaseOptions options = new BaseOptions(
-                baseUrl: basePathOverride ?? basePath,
+    {{clientName}}({Dio? dioOverride, Serializers? serializersOverride, String? basePathOverride, int? connectTimeoutOverride, int? receiveTimeoutOverride, List<Interceptor>? interceptorsOverride, this.fileNamesHaveBrackets=true,}) {
+        if (dioOverride == null) {
+            final options = BaseOptions(
+                baseUrl: basePathOverride ?? defaultBasePath,
                 connectTimeout: connectTimeoutOverride ?? 5000,
                 receiveTimeout: receiveTimeoutOverride ?? 3000,
             );
-            this.dio = new Dio(options);
+            this.dio = Dio(options);
+        }
+        else {
+            this.dio = dioOverride;
         }
 
-        if (interceptors == null) {
+        if (interceptorsOverride == null) {
             this.dio.interceptors.addAll(_defaultInterceptors);
         } else {
-            this.dio.interceptors.addAll(interceptors);
+            this.dio.interceptors.addAll(interceptorsOverride);
         }
 
-        this.serializers = serializers ?? standardSerializers;
-        this.fileNamesHaveBrackets = fileNamesHaveBrackets;
+        this.serializers = serializersOverride ?? standardSerializers;
     }
 
-    void setOAuthToken(String name, String token) {
-        (this.dio.interceptors.firstWhere((element) => element is OAuthInterceptor, orElse: null) as OAuthInterceptor)?.tokens[name] = token;
+     void doForAllInterceptor<T extends Interceptor>(
+    void Function(T interceptor) action,
+  ) {
+    for (var item in this.dio.interceptors.whereType<T>()) {
+      action(item);
     }
+  }
+   void setOAuthToken(String name, String token) {
+     doForAllInterceptor<OAuthInterceptor>((item) {
+      item.tokens[name] = token;
+    });   
+  }
 
-    void setBasicAuth(String name, String username, String password) {
-        (this.dio.interceptors.firstWhere((element) => element is BasicAuthInterceptor, orElse: null) as BasicAuthInterceptor)?.authInfo[name] = BasicAuthInfo(username, password);
-    }
+   void setBasicAuth(String name, String username, String password) {
+    doForAllInterceptor<BasicAuthInterceptor>((item) {
+      item.authInfo[name] = BasicAuthInfo(username, password);
+    });
+  }
 
-    void setApiKey(String name, String apiKey) {
-        (this.dio.interceptors.firstWhere((element) => element is ApiKeyAuthInterceptor, orElse: null) as ApiKeyAuthInterceptor)?.apiKeys[name] = apiKey;
-    }
+  void setApiKey(String name, String apiKey) {
+    doForAllInterceptor<ApiKeyAuthInterceptor>((item) {
+      item.apiKeys[name] = apiKey;
+    });
+  }
 
 {{#apiInfo}}{{#apis}}
     /**
