--- a/dart-dio/auth/basic_auth.mustache
+++ b/dart-dio/auth/basic_auth.mustache
@@ -1,4 +1,3 @@
-{{>header}}
 import 'dart:async';
 import 'dart:convert';
 import 'package:{{pubName}}/auth/auth.dart';
@@ -12,7 +11,7 @@ class BasicAuthInfo {
 }
 
 class BasicAuthInterceptor extends AuthInterceptor {
-    Map<String, BasicAuthInfo> authInfo = {};
+    final authInfo = <String, BasicAuthInfo>{};
 
     @override
     void onRequest(RequestOptions options, RequestInterceptorHandler handler) {
